[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
tokio = { version = "1.0", features = ["full"] }
derive_more = "0.99.17"
parking_lot = "0.12.1"
thiserror = "1.0.61"
log = "0.4"
env_logger = "0.11"
chrono = "0.4.31"
serde_json = "1.0.138"
reqwest = "0.12.12"
async-trait = "0.1.86"
serde = "1.0.217"
futures = "0.3.31"
byteorder = "1.5.0"
rmpv = "1.3.0"
